--- a/Copy_of_In_class_exercise_02.ipynb
+++ b/Copy_of_In_class_exercise_02.ipynb
@@ -206,10 +206,10 @@
       "metadata": {
         "id": "f3CUsrWOj1Xy",
         "colab_type": "code",
-        "outputId": "d04227ad-fc4a-4bff-df58-dd8c1e1ade31",
+        "outputId": "667e6e01-a35e-4821-b6eb-328607a13113",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 132
+          "height": 245
         }
       },
       "source": [
@@ -217,10 +217,8 @@
         "\n",
         "#uploadingFiles =files.upload()\n",
         "i =0\n",
-        "while i <= 100:\n",
-        "  filehandle =open('ARTHROTEC.'+i+'.txt')\n",
-        "  while True:\n",
-        "filehandle = open(filename, 'r')\n",
+        "for i in range(1,100):\n",
+        "  filehandle =open('ARTHROTEC.'+str(i)+'.txt')\n",
         "while True:\n",
         "    # read a single line\n",
         "    line = filehandle.readline()\n",
@@ -235,12 +233,22 @@
       "execution_count": 0,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "IndentationError",
-          "evalue": "ignored",
-          "traceback": [
-            "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-162-af40738a97f8>\"\u001b[0;36m, line \u001b[0;32m8\u001b[0m\n\u001b[0;31m    filehandle = open(filename, 'r')\u001b[0m\n\u001b[0m                                    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m expected an indented block\n"
-          ]
+          "output_type": "stream",
+          "text": [
+            "If I take the pill on an empty stomach I get a very faint sensation of queasiness .\n",
+            "\n",
+            "almost to faint to notice.\n",
+            "\n",
+            "However, I also get diarrhoea at least twice a day.\n",
+            "\n",
+            "There are no gas pains and no other symptoms, so it's inconvenient more than anything else.\n",
+            "\n",
+            "When I am on holiday at the coast I am pain free, mostly, so don't take any Arthrotec, but when I get back to a drier climate the pain is severe, so Arthrotec is very important to me and my quality of life.\n",
+            "\n",
+            "It also allows me to sleep.\n",
+            "\n"
+          ],
+          "name": "stdout"
         }
       ]
     },
