--- a/Copy_of_In_class_exercise_02.ipynb
+++ b/Copy_of_In_class_exercise_02.ipynb
@@ -274,43 +274,43 @@
         }
       },
       "source": [
-        "#%pip install nltk\n",
-        "#%pip install numpy\n",
-        "#%pip install scipy\n",
-        "#%pip install pandas\n",
-        "#%pip install sklearn\n",
+        "%pip install nltk\n",
+        "%pip install numpy\n",
+        "%pip install scipy\n",
+        "%pip install pandas\n",
+        "%pip install sklearn\n",
         "\n",
         "# Testing if nltk is installed successfully\n",
-        "#import nltk\n",
+        "import nltk\n",
         "\n",
-        "#nltk.download()\n",
-        "#sentence = \"I am working in Google Colab.\"\n",
-        "#frequencyDist =nltk.FreqDist()\n",
-        "#for i in nltk.word_tokenize(sentence):\n",
-        "#      frequencyDist[i.lower()] += 1\n",
-        "#print(frequencyDist)\n",
+        "nltk.download()\n",
+        "sentence = \"I am working in Google Colab.\"\n",
+        "frequencyDist =nltk.FreqDist()\n",
+        "for i in nltk.word_tokenize(sentence):\n",
+        "      frequencyDist[i.lower()] += 1\n",
+        "print(frequencyDist)\n",
         "\n",
         "#Testing if numpy is working\n",
         "import numpy as np\n",
         "\n",
-        "#my_multidimensional_array = [[1,2,3], [4,5,6], [7,8,9]]\n",
-        "#np.array(my_multidimensional_array)\n",
+        "my_multidimensional_array = [[1,2,3], [4,5,6], [7,8,9]]\n",
+        "np.array(my_multidimensional_array)\n",
         "\n",
         "#Testing if scipy is working\n",
-        "#import scipy\n",
+        "import scipy\n",
         "\n",
-        "#exp =scipy.exp([3,50])\n",
+        "exp =scipy.exp([3,50])\n",
         "\n",
         "#Testing if pandas are working\n",
-        "#import pandas as pd\n",
+        "import pandas as pd\n",
         "\n",
-        "#data = {\n",
-        "#    'Test 1 Scores': [90, 92, 89, 100], \n",
-        "#    'Test 2 Scores': [89, 87, 95, 94]\n",
-        "#}\n",
+        "data = {\n",
+        "    'Test 1 Scores': [90, 92, 89, 100], \n",
+        "    'Test 2 Scores': [89, 87, 95, 94]\n",
+        "}\n",
         "\n",
-        "#scores =pd.DataFrame(data)\n",
-        "#scores\n",
+        "scores =pd.DataFrame(data)\n",
+        "scores\n",
         "\n",
         "#Testing if sklearn is working\n",
         "\n",
