--- a/Copy_of_In_class_exercise_03.ipynb
+++ b/Copy_of_In_class_exercise_03.ipynb
@@ -110,10 +110,10 @@
       "metadata": {
         "id": "3LB3VFELt3pO",
         "colab_type": "code",
-        "outputId": "6155c4f3-5243-466a-9a40-dd1dea4076ec",
+        "outputId": "2a490655-84aa-4066-875d-0370db7a2611",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 315
+          "height": 107
         }
       },
       "source": [
@@ -124,18 +124,23 @@
         "homepage =(\" https://forecast.weather.gov/MapClick.php?textField1=33.22&textField2=-97.15#.XkNc_WhKg2x\")\n",
         "with urllib.request.urlopen(homepage) as f:\n",
         " webpage = f.read()\n",
+        "\n",
+        "## Using BeautifulSoup to read the webpage \n",
         "soup = BeautifulSoup(webpage)\n",
         "#print(soup)\n",
+        "\n",
+        "## Getting panel-body id seven-day-forecast-body \n",
         "week = soup.find(id=\"seven-day-forecast-body\")\n",
         "#print(week)\n",
         "\n",
+        "## Getting div tombstone-container which contains period-name,\n",
+        "## short-desc, temp paragraphs\n",
         "r = week.find_all(class_=\"tombstone-container\")\n",
+        "\n",
         "#print(r[0])\n",
-        "\n",
-        "print(r[0].find(class_ = \"period-name\").get_text())\n",
-        "print(r[0].find(class_ = \"short-desc\").get_text())\n",
-        "print(r[0].find(class_ = \"temp\").get_text())\n",
-        "\n",
+        "#print(r[0].find(class_ = \"period-name\").get_text())\n",
+        "#print(r[0].find(class_ = \"short-desc\").get_text())\n",
+        "#print(r[0].find(class_ = \"temp\").get_text())\n",
         "\n",
         "periods_names = [item.find(class_='period-name').get_text()for item in r]\n",
         "print(periods_names)\n",
@@ -144,51 +149,53 @@
         "temperatures = [item.find(class_= \"temp\").get_text()for item in r]\n",
         "print(temperatures)\n",
         "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n",
+        "## Getting alt text of image tags in tombstone-container div\n",
+        "img_alt = []\n",
+        "for div in week.find_all(class_=\"tombstone-container\"):\n",
+        "    for img in div.find_all('img', alt=True):\n",
+        "        img_alt.append(img['alt'])\n",
+        "print(img_alt)        \n",
         "\n",
         "import pandas as pd\n",
         "weather = pd.DataFrame(\n",
         "    {'period': periods_names,\n",
         "    \"short_description\":short_description,\n",
         "      \"temperatures\": temperatures,\n",
+        "     \"description\": img_alt\n",
         "    })\n",
         "\n",
-        "print(weather)\n",
+        "#print(weather)\n",
         "weather.to_csv('weather_report.csv')\n",
         "    \n",
         "\n",
         "\n"
       ],
-      "execution_count": 28,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Tonight\n",
-            "Showers\n",
-            "Low: 41 °F\n",
             "['Tonight', 'Wednesday', 'WednesdayNight', 'Thursday', 'ThursdayNight', 'Friday', 'FridayNight', 'Saturday', 'SaturdayNight']\n",
             "['Showers', 'Showers thenSlight ChanceShowers', 'Partly Cloudy', 'Sunny', 'Mostly Clear', 'Sunny', 'Partly Cloudy', 'Slight ChanceShowers', 'Mostly Cloudy']\n",
             "['Low: 41 °F', 'High: 50 °F', 'Low: 31 °F', 'High: 45 °F', 'Low: 28 °F', 'High: 52 °F', 'Low: 39 °F', 'High: 60 °F', 'Low: 48 °F']\n",
-            "           period                 short_description temperatures\n",
-            "0         Tonight                           Showers   Low: 41 °F\n",
-            "1       Wednesday  Showers thenSlight ChanceShowers  High: 50 °F\n",
-            "2  WednesdayNight                     Partly Cloudy   Low: 31 °F\n",
-            "3        Thursday                             Sunny  High: 45 °F\n",
-            "4   ThursdayNight                      Mostly Clear   Low: 28 °F\n",
-            "5          Friday                             Sunny  High: 52 °F\n",
-            "6     FridayNight                     Partly Cloudy   Low: 39 °F\n",
-            "7        Saturday              Slight ChanceShowers  High: 60 °F\n",
-            "8   SaturdayNight                     Mostly Cloudy   Low: 48 °F\n"
+            "['Tonight: Showers, with thunderstorms also possible after 3am.  Low around 41. North wind 5 to 10 mph.  Chance of precipitation is 100%. New rainfall amounts between a half and three quarters of an inch possible. ', 'Wednesday: Showers and possibly a thunderstorm before noon, then a slight chance of showers between noon and 3pm.  High near 50. North wind 5 to 10 mph becoming west in the morning.  Chance of precipitation is 100%. New precipitation amounts between a quarter and half of an inch possible. ', 'Wednesday Night: Partly cloudy, with a low around 31. North northwest wind 10 to 15 mph. ', 'Thursday: Sunny, with a high near 45. North wind 10 to 15 mph, with gusts as high as 20 mph. ', 'Thursday Night: Mostly clear, with a low around 28. North northeast wind 5 to 10 mph. ', 'Friday: Sunny, with a high near 52. East northeast wind 5 to 10 mph becoming southeast in the afternoon. ', 'Friday Night: Partly cloudy, with a low around 39. South southeast wind around 10 mph. ', 'Saturday: A 20 percent chance of showers.  Mostly cloudy, with a high near 60. South wind 10 to 15 mph, with gusts as high as 20 mph. ', 'Saturday Night: Mostly cloudy, with a low around 48. South wind 5 to 10 mph. ']\n"
           ],
           "name": "stdout"
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ZCBvGQsb1zKQ",
+        "colab_type": "code",
+        "colab": {}
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": 0,
+      "outputs": []
     }
   ]
 }
