--- a/Copy_of_In_class_exercise_04.ipynb
+++ b/Copy_of_In_class_exercise_04.ipynb
@@ -84,7 +84,7 @@
       "metadata": {
         "id": "vR0L3_CreM_A",
         "colab_type": "code",
-        "outputId": "a821a7bb-632a-49b2-db01-0d02dbe707ad",
+        "outputId": "ab3e10e4-7f31-4885-e855-148a9ec02ce4",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 1000
@@ -101,6 +101,7 @@
         "import nltk\n",
         "import csv\n",
         "import pandas as pd\n",
+        "import nltk.util\n",
         "from collections import Counter\n",
         "from textblob import TextBlob\n",
         "from nltk.tokenize import sent_tokenize\n",
@@ -235,6 +236,10 @@
         "## Calculate frequency of words in list\n",
         "idx = pd.Index(content, name='Legal') ## Creating the index\n",
         "print(idx.value_counts())\n",
+        "\n",
+        "content=word_tokenize(str(content))\n",
+        "bigrams= ngrams(content,2)\n",
+        "print(bigrams)\n",
         "##################################################################################################################################\n",
         "#######################################################################################\n",
         "\n",
@@ -248,7 +253,7 @@
         "\n",
         "    \n"
       ],
-      "execution_count": 34,
+      "execution_count": 36,
       "outputs": [
         {
           "output_type": "stream",
@@ -3624,6 +3629,17 @@
             "Name: Legal, Length: 799, dtype: int64\n"
           ],
           "name": "stdout"
+        },
+        {
+          "output_type": "error",
+          "ename": "NameError",
+          "evalue": "ignored",
+          "traceback": [
+            "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+            "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+            "\u001b[0;32m<ipython-input-36-815183e7d3e6>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m    145\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    146\u001b[0m \u001b[0mcontent\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mword_tokenize\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mstr\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcontent\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 147\u001b[0;31m \u001b[0mbigrams\u001b[0m\u001b[0;34m=\u001b[0m \u001b[0mngrams\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mcontent\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;36m2\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    148\u001b[0m \u001b[0mprint\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mbigrams\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    149\u001b[0m \u001b[0;31m##################################################################################################################################\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+            "\u001b[0;31mNameError\u001b[0m: name 'ngrams' is not defined"
+          ]
         }
       ]
     },
